--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-numpy==1.15.1
-onnx==1.1.1
-pycuda==2018.1.1
-Pillow>=5.2.0
-wget>=3.2
+tensorrt==7.0.0.11
+numba==0.48.0
+scipy==1.4.1
+keras_retinanet==0.5.1
+onnx==1.4.1
+tqdm==4.41.0
+numpy==1.18.1
+matplotlib==3.1.3
+Keras==2.3.1
+tensorflow_gpu==1.14.0
+filterpy==1.4.5
+pycuda==2019.1.2
+opencv_contrib_python==4.1.1.26
+ipython==7.12.0
+Pillow==7.0.0
+tensorflow==2.1.0
