--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,9 @@ tqdm==4.41.0
 numpy==1.18.1
 matplotlib==3.1.3
 Keras==2.3.1
-tensorflow_gpu==1.14.0
+tensorflow-gpu==1.14.0
 filterpy==1.4.5
 pycuda==2019.1.2
 opencv_contrib_python==4.1.1.26
 ipython==7.12.0
 Pillow==7.0.0
-tensorflow==2.1.0
